Move to dedicated config file

--- a/FMFuckIt/FMFuckIt.csproj
+++ b/FMFuckIt/FMFuckIt.csproj
@@ -5,10 +5,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CSharpDiscordWebhook" Version="2.2.0" />
+    <PackageReference Include="MailKit" Version="3.4.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.0" />
   </ItemGroup>
 
