--- a/Setup/Setup.csproj
+++ b/Setup/Setup.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="WPF-UI" Version="2.0.3" />
 	</ItemGroup>
 
